en este caso estaba haciendo lo que era el resgistro o la opcion de registro que tiene si eliegs tanto empresa como cliente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TaskElCedro"
         tools:targetApi="31">
         <activity
+            android:name=".RegistrarCuenta"
+            android:exported="false" />
+        <activity
+            android:name=".OlvidarCuenta"
+            android:exported="false" />
+        <activity
             android:name=".principal1"
             android:exported="false" />
         <activity
