--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TaskElCedro"
         tools:targetApi="31">
         <activity
+            android:name=".formularioCliente"
+            android:exported="false" />
+        <activity
+            android:name=".formularioEmpresa"
+            android:exported="false" />
+        <activity
             android:name=".RegistrarCuenta"
             android:exported="false" />
         <activity
