--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TaskElCedro"
         tools:targetApi="31">
         <activity
+            android:name=".mainprincipal"
+            android:exported="false" />
+        <activity
             android:name=".formularioCliente"
             android:exported="false" />
         <activity
